<resources>
    <string name="app_name">MovieTek</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Reintentar</string>
    <string name="overview_sample">Los minions, ingenuos y torpes ayudantes de villano, llevan buscando, desde el principio de los tiempos, un verdadero malhechor al que servir. A lo largo de una evolución de millones de años, los minions se han puesto al servicio de los amos más despreciables. Kevin, acompañado por el rebelde Stuart y el adorable Bob, emprende un emocionante viaje para conseguir una jefa a quien servir, la terrible Scarlet Overkill.</string>
    <string name="pacific_rim_the_black">Pacific Rim The Black</string>
    <string name="overview">Resumen</string>
    <string name="back_btn">Back button</string>
    <string name="logout_btn">Logout</string>

    <string name="welcome_msg">Hey, </string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="successfully_login">Successfully login</string>
    <string name="welcome_message">Hola %s,</string>
    <string name="welcome_to_movietek">Welcome to MovieTek</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="error_details_toast">Error when trying to show details</string>
    <string name="release">Lanzamiento:</string>
    <string name="choose_your_favourite_movie">Escoge tu pelicula favorita</string>


</resources>